--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - /var/lib/grafana:/var/lib/grafana
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    privileged: true
+    user: "0"
 
   influxdb:
     image: influxdb:2.0.5
@@ -19,11 +21,12 @@ services:
     ports:
       - '8086:8086'
     volumes:
-      - /var/lib/influxdb:/var/lib/influxdb
+      - /var/lib/influxdb2:/var/lib/influxdb2
     env_file: 
       - vars.env
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    privileged: true
 
   python-cron:
     build:
@@ -38,6 +41,7 @@ services:
     restart: always
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    privileged: true
 
 # 由于我们已经将 volumes 指向了宿主机的目录，下面的定义可以删除
 # volumes:
