--- a/vars.env.example
+++ b/vars.env.example
@@ -4,3 +4,5 @@ DOCKER_INFLUXDB_INIT_PASSWORD=mypassword
 DOCKER_INFLUXDB_INIT_ORG=myorg
 DOCKER_INFLUXDB_INIT_BUCKET=mybucket
 DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=aaabbbcccc
+
+CRONTAB_SCHEDULE=*/1 * * * *
